[metadata]
name = fnal.wda-condb2
version = 2.1.4
author = Igor Mandrichenko
author_email = ivm@fnal.gov
maintainer = Vladimir Podstavkov
maintainer_email = podstvkv@fnal.gov
description = Conditions Database (ConDB2)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fermisda/condb2
keywords = database, web service, conditions database
license = BSD-3-Clause
#project_urls =
#    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    psycopg2-binary
    requests
include_package_data = True
packages = condb2, condb2.ui, condb2.ui.cli

[options.entry_points]
console_scripts =
    condb2 = condb2.ui.condb_ui:main
